@@ -7,20 +7,21 @@
 # THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
 # WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 # WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
-# FOR A PARTICULAR PURPOSE
+# FOR A PARTICULAR PURPOSE.
 #
-#############################################################################
+##############################################################################
+"""PluginIndexes utils.
 
-__version__ = '$Id$'
-
+$Id$
+"""
 
 from warnings import warn
-from types import StringType,ListType,TupleType,DictType,InstanceType
+from types import InstanceType
 from DateTime import DateTime
 
-SequenceTypes = (TupleType, ListType)
 
 class parseIndexRequest:
+
     """
     This class provides functionality to hide the internals of a request
     send from the Catalog/ZCatalog to an index._apply_index() method.
@@ -30,7 +31,6 @@ class parseIndexRequest:
     - old-style parameters where the query for an index as value inside
       the request directory where the index name is the name of the key.
       Additional parameters for an index could be passed as index+"_usage" ...
-
 
     - dictionary-style parameters specify a query for an index as
       an entry in the request dictionary where the key corresponds to the
@@ -43,15 +43,12 @@ class parseIndexRequest:
 
       other parameters depend on the the index
 
-
    - record-style parameters specify a query for an index as instance of the
      Record class. This happens usually when parameters from a web form use
      the "record" type e.g. <input type="text" name="path.query:record:string">.
      All restrictions of the dictionary-style parameters apply to the record-style
      parameters
-
     """
-
 
     ParserException = 'IndexRequestParseError'
 
@@ -73,13 +70,16 @@ class parseIndexRequest:
         usage_param = iid + '_usage'
         if request.has_key(usage_param):
             self.usage = request[usage_param]
-            warn("\nZCatalog query using '%s' detected.\nUsing query parameters ending with '_usage' is deprecated.\nConsider using record-style parameters instead (see lib/python/Products/PluginIndexes/README.txt for details)" % usage_param, DeprecationWarning)
+            warn("ZCatalog query using '%s' detected.\n"
+                 "Using query parameters ending with '_usage' is deprecated.\n"
+                 "Consider using record-style parameters instead "
+                 "(see lib/python/Products/PluginIndexes/README.txt for "
+                 "details)" % usage_param, DeprecationWarning)
 
         param = request[iid]
         keys = None
-        t = type(param)
 
-        if t is InstanceType and not isinstance(param, DateTime):
+        if isinstance(param, InstanceType) and not isinstance(param, DateTime):
             """ query is of type record """
 
             record = param
@@ -90,7 +90,7 @@ class parseIndexRequest:
                     "'query' attribute" % self.id)
             keys = record.query
 
-            if type(keys) is StringType:
+            if isinstance(keys, str):
                 keys = [keys.strip()]
 
             for op in options:
@@ -99,11 +99,11 @@ class parseIndexRequest:
                 if hasattr(record, op):
                     setattr(self, op, getattr(record, op))
 
-        elif t is DictType:
+        elif isinstance(param, dict):
             """ query is a dictionary containing all parameters """
 
             query = param.get("query", ())
-            if type(query) in SequenceTypes:
+            if isinstance(query, (tuple, list)):
                 keys = query
             else:
                 keys = [ query ]
@@ -117,7 +117,7 @@ class parseIndexRequest:
         else:
             """ query is tuple, list, string, number, or something else """
 
-            if t in SequenceTypes:
+            if isinstance(param, (tuple, list)):
                 keys = param
             else:
                 keys = [param]
@@ -129,21 +129,9 @@ class parseIndexRequest:
 
         self.keys = keys
 
-
-    def get(self,k,default_v=None):
-
-        if hasattr(self,k):
-            v = getattr(self,k)
-            if v: return v
-            else: return default_v
-        else:
-            return default_v
-
-def test():
-
-    r  = parseIndexRequest({'path':{'query':"","level":2,"operator":'and'}},'path',['query',"level","operator"])
-    for k in dir(r):
-        print k,getattr(r,k)
-
-if __name__=="__main__":
-    test()
+    def get(self, k, default_v=None):
+        if hasattr(self, k):
+            v = getattr(self, k)
+            if v != '':
+                return v
+        return default_v
